--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@nguniversal/express-engine": "^16.0.2",
+    "@types/marked": "^5.0.0",
     "express": "^4.15.2",
+    "ngx-markdown": "^16.0.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -34,7 +37,6 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@nguniversal/builders": "^16.0.2",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
