--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@nguniversal/express-engine": "^16.0.2",
-    "@types/marked": "^5.0.0",
     "express": "^4.15.2",
+    "marked": "^4.3.0",
     "ngx-markdown": "^16.0.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
@@ -40,6 +40,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/marked": "^4.3.0",
     "@types/node": "^14.15.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
