--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-server": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@nguniversal/express-engine": "^16.0.2",
+    "dayjs": "^1.11.8",
     "express": "^4.15.2",
     "marked": "^4.3.0",
-    "ngx-markdown": "^16.0.0",
     "prismjs": "^1.29.0",
+    "remark-rehype": "^10.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -50,7 +51,12 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.24",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.3",
+    "remark-frontmatter": "^4.0.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.0.2"
+    "typescript": "~5.0.2",
+    "vfile-matter": "^5.0.0"
   }
 }
