update angular version to v17

--- a/angular.json
+++ b/angular.json
@@ -78,10 +78,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "jessyco:build:production"
+              "buildTarget": "jessyco:build:production"
             },
             "development": {
-              "browserTarget": "jessyco:build:development"
+              "buildTarget": "jessyco:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -89,7 +89,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "jessyco:build"
+            "buildTarget": "jessyco:build"
           }
         },
         "test": {
@@ -145,7 +145,7 @@
           "defaultConfiguration": "production"
         },
         "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
+          "builder": "@angular-devkit/build-angular:ssr-dev-server",
           "configurations": {
             "development": {
               "browserTarget": "jessyco:build:development",
@@ -159,7 +159,7 @@
           "defaultConfiguration": "development"
         },
         "prerender": {
-          "builder": "@nguniversal/builders:prerender",
+          "builder": "@angular-devkit/build-angular:prerender",
           "options": {
             "routes": [
               "/"
