--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/platform-server": "^16.0.0",
-    "@angular/router": "^16.0.0",
-    "@nguniversal/express-engine": "^16.0.2",
+    "@angular/animations": "^17.0.2",
+    "@angular/common": "^17.0.2",
+    "@angular/compiler": "^17.0.2",
+    "@angular/core": "^17.0.2",
+    "@angular/forms": "^17.0.2",
+    "@angular/platform-browser": "^17.0.2",
+    "@angular/platform-browser-dynamic": "^17.0.2",
+    "@angular/platform-server": "^17.0.2",
+    "@angular/router": "^17.0.2",
+    "@angular/ssr": "^17.0.0",
     "date-fns": "^2.30.0",
     "express": "^4.15.2",
     "marked": "^4.3.0",
@@ -37,13 +37,12 @@
     "remark-rehype": "^10.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.5",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@nguniversal/builders": "^16.0.2",
+    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "^17.0.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
@@ -64,7 +63,7 @@
     "remark-frontmatter": "^4.0.1",
     "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.2",
+    "typescript": "~5.2.2",
     "vfile-matter": "^5.0.0"
   }
 }
